# gitwork

./: .coverage  README.md  pyproject.toml
.github/workflows/: ci.yml
gitwork/: __init__.py  __main__.py  cli.py  core.py  github.py
gitwork.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_core.py  test_github.py
